# Lab3QueueAndStack

./: CMakeLists.txt  main.cpp
Controller/: Controller.cpp  Controller.h
structures/: List.cpp  List.h
structures/Node/: Node.cpp  Node.h
structures/Queue/: Queue.cpp  Queue.h
structures/Stack/: Stack.cpp  Stack.h
